--- a/assets/css/public.css
+++ b/assets/css/public.css
@@ -101,6 +101,7 @@
   --bs-primary-rgb: 46, 48, 146;
   --bs-secondary-rgb: 236, 0, 140;
   --btn-active-color: var(--primary-color);
+  --bs-link-color-rgb: 46, 48, 146;
   --bs-primary-text-emphasis: var(--primary-100-color);
   --bs-light-border-subtle: #D3D3D3;
   --bs-warning: #FFC20F;
@@ -416,16 +417,22 @@ a.btn-outline-light:hover {
 }
 
 .accordion {
-  --bs-accordion-color: var(--primary-color);
+  --bs-accordion-color: #5A5A5A;
   --bs-accordion-bg: none;
   --bs-accordion-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, border-radius 0.15s ease;
   --bs-accordion-border-width: 0px;
   --bs-accordion-btn-color: var(--primary-color);
   --bs-accordion-btn-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='none' stroke='%23080A4F' stroke-linecap='round' stroke-linejoin='round'%3e%3cpath d='m2 5 6 6 6-6'/%3e%3c/svg%3e");
-  --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='none' stroke='%23FFFFFF' stroke-linecap='round' stroke-linejoin='round'%3e%3cpath d='m2 5 6 6 6-6'/%3e%3c/svg%3e");
+  --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='none' stroke='%232E3092' stroke-linecap='round' stroke-linejoin='round'%3e%3cpath d='m2 5 6 6 6-6'/%3e%3c/svg%3e");
   --bs-accordion-btn-focus-box-shadow: none;
-  --bs-accordion-active-color: #FFF;
-  --bs-accordion-active-bg: var(--primary-color);
+  --bs-accordion-active-color: var(--primary-color);
+  --bs-accordion-active-bg: #FFF;
+}
+
+.accordion-button:not(.collapsed) {
+  border-radius: 65px;
+  border-radius: 65px !important;
+
 }
 
 .bg-gold-gradient {
@@ -1340,6 +1347,12 @@ footer h3.title.socials::before {
   background: #010329;
 }
 
+.form-check-input:checked {
+  background-color: var(--primary-color) !important;
+  border-color: var(--primary-color) !important;
+}
+
+
 .heroSection,
 .posterSection {
   background: linear-gradient(282deg, #000120 0%, #080A50 100%);
@@ -1396,6 +1409,11 @@ section.works {
 textarea::placeholder,
 input::placeholder {
   color: #5A5A5A !important;
+}
+
+
+#art_info input::placeholder {
+  color: var(--primary-color) !important;
 }
 
 .pagination a {
