--- a/assets/css/public.css
+++ b/assets/css/public.css
@@ -95,7 +95,6 @@
   --secondary-700-color: #ff14a0;
   --secondary-800-color: #ff0198;
 
-
   --bs-font-sans-serif: IRANSansX;
   --bs-body-font-weight: 500;
   --bs-primary-rgb: 46, 48, 146;
@@ -299,7 +298,7 @@ a.btn-outline-primary:hover {
   --bs-btn-bg: var(--bs-warning);
   --bs-btn-border-color: var(--bs-warning);
   --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #ffca2c;
+  --bs-btn-hover-bg: #fcd359;
   --bs-btn-hover-border-color: #ffc720;
   --bs-btn-focus-shadow-rgb: 217, 164, 6;
   --bs-btn-active-color: #000;
@@ -307,7 +306,7 @@ a.btn-outline-primary:hover {
   --bs-btn-active-border-color: #ffc720;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #000;
-  --bs-btn-disabled-bg: var(--bs-warning);
+  --bs-btn-disabled-bg: #fcd359;
   --bs-btn-disabled-border-color: var(--bs-warning);
 }
 
