--- a/assets/css/public.css
+++ b/assets/css/public.css
@@ -1451,7 +1451,16 @@ header .logo {
   max-width: 100%;
 }
 
+
+
+
 @media (min-width: 992px) {
+
+
+  .hero-boxes {
+    height: 503px;
+  }
+
   header .logo {
     max-width: 70%;
   }
@@ -1527,12 +1536,30 @@ header .logo {
     font-size: 20px !important;
   }
 
+  .f-52{
+    font-size: 32px !important;
+  }
+
+  .f-24{
+    font-size: 18px !important;
+  }
+
   .f-20 {
     font-size: 14px !important;
   }
+
+  .hero-boxes {
+    height: 220px;
+  }
 }
 
-@media (max-width: 768px) {}
+@media (max-width: 768px) {
+
+  .hero-boxes {
+    height: auto;
+  }
+
+}
 
 @media (max-width: 576px) {}
 
