--- a/assets/css/public.css
+++ b/assets/css/public.css
@@ -1415,16 +1415,17 @@ input::placeholder {
   color: var(--primary-color) !important;
 }
 
-.pagination a {
+/* .pagination a {
   background-color: #F5F5F8 !important;
 }
-
+*/
 .pagination a:hover,
 .pagination a.active {
-  background-color: var(--primary-color) !important;
+  background-color: #A0A0A0 !important;
   color: #FFFFFF !important;
+  border-style: none !important;
 
-}
+} 
 
 .posterVideoSection {
   background: linear-gradient(228deg, #000 54.86%, #080A50 85.15%)
