--- a/assets/css/public.css
+++ b/assets/css/public.css
@@ -1469,6 +1469,30 @@ a.post-title {
     transition: all 0.3s ease; 
 }
 
+
+.userProfile{
+  border-bottom: 3px solid #000000;
+    margin: 20px 0px;
+    position: relative;
+}
+
+
+.userProfile::before {
+    left: auto;
+    right: auto;
+    content: 'مشخصات مسئول گروه';
+    position: absolute;
+    color: var(--primary-color);
+    font-size: 24px;
+    font-weight: bold;
+    overflow: hidden;
+    background: #DDDDDD;
+    bottom: -18px;
+    width: 40%;
+    text-align: center;
+}
+
+
 @media (min-width: 992px) {
 
 
@@ -1565,6 +1589,11 @@ a.post-title {
 
   .hero-boxes {
     height: 220px;
+  }
+
+  .px-100{
+    padding-left: 5px;
+    padding-right: 5px;
   }
 }
 
