--- a/assets/css/public.css
+++ b/assets/css/public.css
@@ -1493,6 +1493,12 @@ a.post-title {
 }
 
 
+.sliderTitle{
+  background-color: #2E3092;
+  height: 105px;
+}
+
+
 @media (min-width: 992px) {
 
 
@@ -1541,6 +1547,22 @@ a.post-title {
 }
 
 @media (max-width: 992px) {
+
+
+  
+.sliderTitle{
+  height: 50px;
+}
+
+
+.sliderSwiper .swiper-pagination-bullets.swiper-pagination-horizontal {
+  bottom: 10px;
+}
+
+.swiper-pagination-bullet {
+  width: 10px;
+  height: 10px;
+}
 
   .poster-video {
     width: 45%;
