--- a/assets/css/public.css
+++ b/assets/css/public.css
@@ -1499,6 +1499,11 @@ a.post-title {
 }
 
 
+.videoPlayImage {
+  width: 150px;
+  height: 150px;
+}
+
 @media (min-width: 992px) {
 
 
@@ -1549,7 +1554,11 @@ a.post-title {
 @media (max-width: 992px) {
 
 
-  
+  .videoPlayImage {
+  width: 90px;
+  height: 90px;
+}
+
 .sliderTitle{
   height: 50px;
 }
