--- a/assets/css/public.css
+++ b/assets/css/public.css
@@ -74,6 +74,54 @@
 
 
 
+/* font-family RAY */
+
+@font-face {
+  font-family: RAY;
+  font-style: normal;
+  font-weight: 300;
+  src: url("../fonts/RAY/RAY-LIGHT.TTF") format("truetype");
+}
+
+@font-face {
+  font-family: RAY;
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/RAY/RAY.TTF") format("truetype");
+}
+
+@font-face {
+  font-family: RAY;
+  font-style: normal;
+  font-weight: 500;
+  src: url("../fonts/RAY/RAY-MEDIUM.TTF") format("truetype");
+}
+
+
+@font-face {
+  font-family: RAY;
+  font-style: normal;
+  font-weight: 700;
+  src: url("../fonts/RAY/RAY-BOLD.TTF") format("truetype");
+}
+
+
+@font-face {
+  font-family: RAY;
+  font-style: normal;
+  font-weight: 900;
+  src: url("../fonts/RAY/RAY-BLACK.TTF") format("truetype");
+}
+
+@font-face {
+  font-family: RAY;
+  font-style: normal;
+  font-weight: 1000;
+  src: url("../fonts/RAY/RAY-EXTRABLACK.TTF") format("truetype");
+}
+
+
+
 :root {
   --primary-color: #2E3092;
   --primary-100-color: #ededf9;
@@ -95,7 +143,7 @@
   --secondary-700-color: #ff14a0;
   --secondary-800-color: #ff0198;
 
-  --bs-font-sans-serif: IRANSansX;
+  --bs-font-sans-serif: RAY;
   --bs-body-font-weight: 500;
   --bs-primary-rgb: 46, 48, 146;
   --bs-secondary-rgb: 236, 0, 140;
